<resources>
    <string name="app_name">MemoryMatchWeVideo</string>
    <string name="title_game">Game</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="title_settings">Settings</string>

    <!-- GAME -->
    <string name="score_title">Score: %1$d</string>
    <string name="time_title">Time: %1$d</string>
    <string name="final_score">Final score: %1$d</string>
    <string name="start_game">Start Game</string>
    <string name="really">Are you really trying to submit this score?</string>
    <string name="game_over">GAME OVER</string>
    <string name="submit_score">Submit score</string>

    <!-- SETTINGS -->
    <string name="settings_grid_size">Grid size: %1$.0fx%2$.0f</string>
    <string name="max_grid_size">8.0</string>
    <string name="min_grid_size">2.0</string>

    <!-- SCOREBOARD -->
    <string name="invalid_name">Please insert a name of 3 characters</string>
    <string name="input_name_dialog_title">Your name here</string>
    <string name="input_name_dialog_hint">Exactly 3 characters</string>
    <string name="submit_name">Submit</string>
</resources>