<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/globalMargin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yourNameTitleTV"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeMedium"
            android:text="@string/input_name_dialog_title" />

        <EditText
            android:id="@+id/yourNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:hint="@string/input_name_dialog_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBT"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_name"/>

    </LinearLayout>
</layout>