<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".components.game.GameFragment">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:indeterminate="true"
            android:maxHeight="16dp"
            android:minHeight="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mpb_indeterminateTint="@color/colorLimeGreen"
            app:mpb_progressStyle="horizontal"
            app:mpb_progressTint="@color/colorDarkOliveGreen"
            app:mpb_showProgressBackground="false"
            app:mpb_useIntrinsicPadding="false"
            tools:progress="60"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/preGameLayoutCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundTransparentDark"
            android:visibility="visible"
            tools:visibility="invisible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/preGamePlayGameBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/start_game"
                android:textSize="@dimen/textSizeLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gameInProgressLayoutCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scoreTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/globalMargin"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@id/timeTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Score:" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timeTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/globalMargin"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/scoreTV"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Time:" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/globalMargin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scoreTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/postGameLayoutCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="invisible">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/postGameTitleTV"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/game_over"
                android:textSize="@dimen/textSizeLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/postGameScoreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postGameTitleTV"
                tools:text="10" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/postGameSubmitScoreBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_score"
                app:layout_constraintTop_toBottomOf="@id/postGameScoreTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>